--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,1 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Jersey+15&family=Tiny5&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Libre+Barcode+128+Text&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Exo+2:wght@100..900&display=swap');
